--- a/src/MarketplaceCompleto.App/Views/_ViewImports.cshtml
+++ b/src/MarketplaceCompleto.App/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using MarketplaceCompleto.App
-@using MarketplaceCompleto.App.Models
+@using MarketplaceCompleto.App.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
