--- a/src/MarketplaceCompleto.App/Views/Produtos/Delete.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Produtos/Delete.cshtml
@@ -11,6 +11,9 @@
     <h4>ProdutoViewModel</h4>
     <hr />
     <dl class="row">
+        <dt>
+            @Html.DisplayNameFor(model => model.FornecedorId)
+        </dt>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
