--- a/src/MarketplaceCompleto.App/Views/Produtos/Edit.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Produtos/Edit.cshtml
@@ -14,6 +14,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="FornecedorId" class="control-label"></label><br />
+                <label asp-for="FornecedorId" class="control-label"></label>
+                <select asp-for="FornecedorId" class="form-control" asp-items="@(new SelectList(Model.Fornecedores, "Id", "Nome", Model.FornecedorId))">
+                    <option></option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
