--- a/src/MarketplaceCompleto.App/Views/Produtos/Index.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Produtos/Index.cshtml
@@ -35,7 +35,7 @@
 @foreach (var item in Model) {
             <tr>
                 <td>
-                    
+                    <img src="~/imagens/@item.Imagem" alt="@item.Imagem" style="width: 70px; heigth: 100px" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Nome)
