--- a/src/MarketplaceCompleto.App/Views/Fornecedores/Index.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Fornecedores/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MarketplaceCompleto.App.ViewModels.FornecedorViewModel>
+﻿@using MarketplaceCompleto.App.Extensions;
+@model IEnumerable<MarketplaceCompleto.App.ViewModels.FornecedorViewModel>
 
 @{
     ViewData["Title"] = "Lista de Fornecedores";
@@ -21,7 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Ativo)
             </th>
-            <th></th>
+            <th>
+
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -31,10 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoFornecedor)
+                @this.FormataDocumento(item.TipoFornecedor, item.Documento)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ativo)
