Refatora program.cs para pasta Configurations

--- a/src/MarketplaceCompleto.App/Views/_ViewImports.cshtml
+++ b/src/MarketplaceCompleto.App/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MarketplaceCompleto.App
 @using MarketplaceCompleto.App.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, MarketplaceCompleto.App"
