--- a/src/MarketplaceCompleto.App/Views/Shared/_Layout.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - MarketplaceCompleto.App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - MarketplaceCompleto.App - <email>contato</email> - <email>suporte</email>
         </div>
     </footer>
     <environment include="Development">
