--- a/src/MarketplaceCompleto.App/Views/Fornecedores/Edit.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Fornecedores/Edit.cshtml
@@ -10,7 +10,7 @@
 
 <form asp-action="Edit">
 
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <vc:Sumary></vc:Sumary>
 
     <input type="hidden" asp-for="Id" />
 
