--- a/src/MarketplaceCompleto.App/Views/Produtos/Index.cshtml
+++ b/src/MarketplaceCompleto.App/Views/Produtos/Index.cshtml
@@ -7,6 +7,8 @@
 <h1>@ViewData["Title"]</h1>
 <hr />
 
+<vc:Sumary></vc:Sumary>
+
 <p>
     <a class="btn btn-info" asp-action="Create">Novo Produto</a>
 </p>
